--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -60,6 +60,7 @@
   "auth.register.terms.suffix": "disponibles en el sitio de 5Horas.",
   "auth.register.showPassword": "Mostrar contraseña",
   "auth.register.hidePassword": "Ocultar contraseña",
+  "auth.register.haveAccount": "Ya tengo una cuenta",
   "auth.register.panelTitle": "Registro inicial",
   "auth.register.panelMessage": "Complete los datos para crear la primera cuenta propietaria.",
   "auth.profile.title": "Perfil",
