--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -64,6 +64,7 @@
   "auth.register.terms.suffix": "disponíveis no site da 5Horas.",
   "auth.register.showPassword": "Mostrar senha",
   "auth.register.hidePassword": "Ocultar senha",
+  "auth.register.haveAccount": "Já tenho uma conta",
   "auth.register.panelTitle": "Registro inicial",
   "auth.register.panelMessage": "Complete os dados para criar a primeira conta proprietária.",
   "auth.profile.title": "Perfil",
