Align register country field styling

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -53,11 +53,12 @@
   "auth.login.recoveryMessageWithEmail": "We'll send reset instructions to {email}.",
   "auth.login.panelTitle": "Sign in",
   "auth.login.panelMessage": "Use your credentials to sign in without leaving the main shell.",
+  "auth.login.noAccount": "New here?",
+  "auth.login.createAccount": "Create your account",
   "auth.register.title": "Create account",
   "auth.register.submit": "Register",
   "auth.register.terms.prefix": "I have read and accept the",
   "auth.register.terms.link": "legal terms",
-  "auth.register.terms.suffix": "available on the 5Horas website.",
   "auth.register.showPassword": "Show password",
   "auth.register.hidePassword": "Hide password",
   "auth.register.haveAccount": "I already have an account",
@@ -120,6 +121,7 @@
   "auth.form.fullName.placeholder": "e.g., Ana Maria Silva",
   "auth.form.name": "Name",
   "auth.form.email": "Email",
+  "auth.form.loginIdentifier": "Email or mobile number",
   "auth.form.password": "Password",
   "auth.passwordStrength.label": "Password strength",
   "auth.passwordStrength.level.weak": "Weak",
@@ -129,6 +131,7 @@
   "auth.form.owner": "Owner",
   "auth.form.member": "Member",
   "auth.form.phone": "Mobile phone",
+  "auth.form.phone.countryCode": "Country code",
   "auth.form.phone.region.br": "Brazil (+55)",
   "auth.form.phone.region.intl": "International number",
   "auth.form.phone.hint": "Choose Brazil (+55) to auto-format or include the country code for international numbers.",
@@ -144,6 +147,7 @@
   "auth.feedback.fullNameRequired": "Enter first and last name.",
   "auth.feedback.invalidBrazilianPhone": "Enter a valid Brazilian mobile number with area code and ninth digit.",
   "auth.feedback.invalidInternationalPhone": "Include the country code with the + prefix for international numbers.",
+  "auth.feedback.invalidCountryCode": "Enter a two-digit country code.",
   "auth.feedback.profileUpdated": "Profile updated successfully.",
   "auth.feedback.passwordWeak": "Choose a stronger password to continue.",
   "auth.feedback.userNotFound": "User not found.",
