--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -53,11 +53,12 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instrucciones de restablecimiento a {email}.",
   "auth.login.panelTitle": "Iniciar sesión",
   "auth.login.panelMessage": "Usa tus credenciales para ingresar sin salir del panel principal.",
+  "auth.login.noAccount": "¿Es nuevo por aquí?",
+  "auth.login.createAccount": "Cree su cuenta",
   "auth.register.title": "Crear cuenta",
   "auth.register.submit": "Registrar",
   "auth.register.terms.prefix": "He leído y acepto los",
   "auth.register.terms.link": "términos legales",
-  "auth.register.terms.suffix": "disponibles en el sitio de 5Horas.",
   "auth.register.showPassword": "Mostrar contraseña",
   "auth.register.hidePassword": "Ocultar contraseña",
   "auth.register.haveAccount": "Ya tengo una cuenta",
@@ -120,6 +121,7 @@
   "auth.form.fullName.placeholder": "Ej.: Ana María Silva",
   "auth.form.name": "Nombre",
   "auth.form.email": "Correo electrónico",
+  "auth.form.loginIdentifier": "Correo o celular",
   "auth.form.password": "Contraseña",
   "auth.passwordStrength.label": "Fuerza de la contraseña",
   "auth.passwordStrength.level.weak": "Débil",
@@ -129,6 +131,7 @@
   "auth.form.owner": "Propietario",
   "auth.form.member": "Miembro",
   "auth.form.phone": "Celular",
+  "auth.form.phone.countryCode": "Código del país",
   "auth.form.phone.region.br": "Brasil (+55)",
   "auth.form.phone.region.intl": "Número internacional",
   "auth.form.phone.hint": "Selecciona Brasil (+55) para formatear automáticamente o incluye el código del país para números internacionales.",
@@ -144,6 +147,7 @@
   "auth.feedback.fullNameRequired": "Ingresa nombre y apellido.",
   "auth.feedback.invalidBrazilianPhone": "Ingresa un celular brasileño válido con código de área y noveno dígito.",
   "auth.feedback.invalidInternationalPhone": "Incluye el código de país con el prefijo + para números internacionales.",
+  "auth.feedback.invalidCountryCode": "Ingresa un código de país de dos dígitos.",
   "auth.feedback.profileUpdated": "Perfil actualizado correctamente.",
   "auth.feedback.passwordWeak": "Usa una contraseña más segura para continuar.",
   "auth.feedback.userNotFound": "Usuario no encontrado.",
