--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -57,11 +57,12 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instruções de redefinição para {email}.",
   "auth.login.panelTitle": "Acessar conta",
   "auth.login.panelMessage": "Use suas credenciais para entrar sem sair do painel principal.",
+  "auth.login.noAccount": "Novo por aqui?",
+  "auth.login.createAccount": "Criar conta",
   "auth.register.title": "Criar conta",
   "auth.register.submit": "Registrar",
   "auth.register.terms.prefix": "Li e aceito os",
   "auth.register.terms.link": "termos legais",
-  "auth.register.terms.suffix": "disponíveis no site da 5Horas.",
   "auth.register.showPassword": "Mostrar senha",
   "auth.register.hidePassword": "Ocultar senha",
   "auth.register.haveAccount": "Já tenho uma conta",
@@ -124,6 +125,7 @@
   "auth.form.fullName.placeholder": "Ex.: Ana Maria Silva",
   "auth.form.name": "Nome",
   "auth.form.email": "E-mail",
+  "auth.form.loginIdentifier": "E-mail ou celular",
   "auth.form.password": "Senha",
   "auth.passwordStrength.label": "Força da senha",
   "auth.passwordStrength.level.weak": "Fraca",
@@ -133,6 +135,7 @@
   "auth.form.owner": "Proprietário",
   "auth.form.member": "Membro",
   "auth.form.phone": "Celular",
+  "auth.form.phone.countryCode": "Código do país",
   "auth.form.phone.region.br": "Brasil (+55)",
   "auth.form.phone.region.intl": "Número internacional",
   "auth.form.phone.hint": "Selecione Brasil (+55) para formatar automaticamente ou informe o código do país para números internacionais.",
@@ -148,6 +151,7 @@
   "auth.feedback.fullNameRequired": "Informe nome e sobrenome.",
   "auth.feedback.invalidBrazilianPhone": "Informe um celular brasileiro válido com DDD e nono dígito.",
   "auth.feedback.invalidInternationalPhone": "Inclua o código do país com o prefixo + para números internacionais.",
+  "auth.feedback.invalidCountryCode": "Informe um código de país com dois dígitos.",
   "auth.feedback.profileUpdated": "Perfil atualizado com sucesso.",
   "auth.feedback.passwordWeak": "Use uma senha mais forte para continuar.",
   "auth.feedback.userNotFound": "Usuário não encontrado.",
