Make login footer collapsible

--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -53,6 +53,7 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instrucciones de restablecimiento a {email}.",
   "auth.login.panelTitle": "Iniciar sesión",
   "auth.login.panelMessage": "Usa tus credenciales para ingresar sin salir del panel principal.",
+  "auth.login.intro": "Inicia sesión con tu correo o celular para seguir explorando.",
   "auth.login.noAccount": "¿Es nuevo por aquí?",
   "auth.login.createAccount": "Cree su cuenta",
   "auth.register.title": "Crear cuenta",
@@ -169,6 +170,8 @@
   "footer.revision": "{appName} · Revisión {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisión no disponible",
   "footer.revisionLog": "Ver registro de revisiones",
+  "footer.toggle.expand": "Mostrar información adicional del pie de página",
+  "footer.toggle.collapse": "Ocultar información adicional del pie de página",
   "admin.gateway.inputLabel": "Código administrativo",
   "admin.dashboard.kicker": "Modo mantenimiento",
   "admin.dashboard.title": "Centro de comando",
