--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -45,6 +45,8 @@
   "footer.revision": "{appName} · Revisão {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisão indisponível",
   "footer.revisionLog": "Ver log de revisões",
+  "footer.toggle.expand": "Mostrar informações adicionais do rodapé",
+  "footer.toggle.collapse": "Ocultar informações adicionais do rodapé",
   "auth.login.title": "Acessar conta",
   "auth.login.submit": "Entrar",
   "auth.login.remember": "Lembrar-me",
@@ -57,6 +59,7 @@
   "auth.login.recoveryMessageWithEmail": "Enviaremos instruções de redefinição para {email}.",
   "auth.login.panelTitle": "Acessar conta",
   "auth.login.panelMessage": "Use suas credenciais para entrar sem sair do painel principal.",
+  "auth.login.intro": "Entre com seu e-mail ou celular para continuar explorando a plataforma.",
   "auth.login.noAccount": "Novo por aqui?",
   "auth.login.createAccount": "Criar conta",
   "auth.register.title": "Criar conta",
