--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -53,6 +53,7 @@
   "auth.login.recoveryMessageWithEmail": "We'll send reset instructions to {email}.",
   "auth.login.panelTitle": "Sign in",
   "auth.login.panelMessage": "Use your credentials to sign in without leaving the main shell.",
+  "auth.login.intro": "Sign in with your email address or mobile number to keep exploring.",
   "auth.login.noAccount": "New here?",
   "auth.login.createAccount": "Create your account",
   "auth.register.title": "Create account",
@@ -169,6 +170,8 @@
   "footer.revision": "{appName} · Revision {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revision unavailable",
   "footer.revisionLog": "View revision log",
+  "footer.toggle.expand": "Show additional footer information",
+  "footer.toggle.collapse": "Hide additional footer information",
   "admin.gateway.inputLabel": "Administrative code",
   "admin.dashboard.kicker": "Maintenance mode",
   "admin.dashboard.title": "Command center",
