Add system and user miniapp entries to user menu

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -12,6 +12,7 @@
   "actions.openUserMenuWithName": "Open user menu for {name}",
   "actions.openUserPanel": "Open user panel",
   "actions.openUserPanelWithName": "Open user panel for {name}",
+  "actions.openSystemPanel": "Open system panel",
   "actions.close": "Close",
   "actions.toggleSidebar": "Toggle sidebar",
   "actions.save": "Save",
@@ -29,6 +30,7 @@
   "nav.settings": "Settings",
   "settings.language": "Language",
   "settings.theme": "Theme",
+  "settings.systemPanel": "System panel",
   "settings.userPanel": "User panel",
   "settings.userMenuTitle": "User preferences",
   "language.dialog.title": "Language settings",
@@ -41,6 +43,12 @@
   "panel.miniapps.item2.message": "You're now exploring Mini-app 2.",
   "panel.actions.login": "Sign in",
   "panel.actions.register": "Create account",
+  "miniapps.systemDashboard.label": "System panel",
+  "miniapps.systemDashboard.title": "System Panel MiniApp",
+  "miniapps.systemDashboard.message": "",
+  "miniapps.userDashboard.label": "User panel",
+  "miniapps.userDashboard.title": "User Panel MiniApp",
+  "miniapps.userDashboard.message": "",
   "auth.login.title": "Sign in",
   "auth.login.submit": "Sign in",
   "auth.login.remember": "Remember me",
