--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -12,6 +12,7 @@
   "actions.openUserMenuWithName": "Abrir menú de usuario de {name}",
   "actions.openUserPanel": "Abrir panel de usuario",
   "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
+  "actions.openSystemPanel": "Abrir panel del sistema",
   "actions.close": "Cerrar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Guardar",
@@ -29,6 +30,7 @@
   "nav.settings": "Configuraciones",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
+  "settings.systemPanel": "Panel del sistema",
   "settings.userPanel": "Panel de usuario",
   "settings.userMenuTitle": "Preferencias del usuario",
   "language.dialog.title": "Preferencias de idioma",
@@ -41,6 +43,12 @@
   "panel.miniapps.item2.message": "Estás explorando el Mini-app 2.",
   "panel.actions.login": "Ingresar",
   "panel.actions.register": "Crear cuenta",
+  "miniapps.systemDashboard.label": "Panel del sistema",
+  "miniapps.systemDashboard.title": "MiniApp Panel del Sistema",
+  "miniapps.systemDashboard.message": "",
+  "miniapps.userDashboard.label": "Panel del usuario",
+  "miniapps.userDashboard.title": "MiniApp Panel del Usuario",
+  "miniapps.userDashboard.message": "",
   "auth.login.title": "Iniciar sesión",
   "auth.login.submit": "Ingresar",
   "auth.login.remember": "Recordarme",
