--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -12,6 +12,7 @@
   "actions.openUserMenuWithName": "Abrir menu do usuário de {name}",
   "actions.openUserPanel": "Abrir painel do usuário",
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
+  "actions.openSystemPanel": "Abrir painel do sistema",
   "actions.close": "Fechar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Salvar",
@@ -29,6 +30,7 @@
   "nav.settings": "Configurações",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
+  "settings.systemPanel": "Painel do sistema",
   "settings.userPanel": "Painel do usuário",
   "settings.userMenuTitle": "Preferências do usuário",
   "language.dialog.title": "Preferências de idioma",
@@ -41,6 +43,12 @@
   "panel.miniapps.item2.message": "Você está visualizando o conteúdo do Mini-app 2.",
   "panel.actions.login": "Acessar",
   "panel.actions.register": "Criar conta",
+  "miniapps.systemDashboard.label": "Painel do sistema",
+  "miniapps.systemDashboard.title": "MiniApp Painel de Sistema",
+  "miniapps.systemDashboard.message": "",
+  "miniapps.userDashboard.label": "Painel do usuário",
+  "miniapps.userDashboard.title": "MiniApp Painel do Usuário",
+  "miniapps.userDashboard.message": "",
   "footer.copyright": "2024 Organização Exemplo",
   "footer.revision": "{appName} · Revisão {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisão indisponível",
