Relocate mini-app navigation trigger

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -13,6 +13,7 @@
   "actions.openUserPanel": "Open user panel",
   "actions.openUserPanelWithName": "Open user panel for {name}",
   "actions.openSystemPanel": "Open system panel",
+  "actions.openMiniappMenu": "Open mini-app menu",
   "actions.close": "Close",
   "actions.toggleSidebar": "Toggle sidebar",
   "actions.save": "Save",
