--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -13,6 +13,7 @@
   "actions.openUserPanel": "Abrir panel de usuario",
   "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
   "actions.openSystemPanel": "Abrir panel del sistema",
+  "actions.openMiniappMenu": "Abrir menú de miniapps",
   "actions.close": "Cerrar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Guardar",
