--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -13,6 +13,7 @@
   "actions.openUserPanel": "Abrir painel do usuário",
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
   "actions.openSystemPanel": "Abrir painel do sistema",
+  "actions.openMiniappMenu": "Abrir menu de miniapps",
   "actions.close": "Fechar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Salvar",
