feat: redesign footer for store compliance

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -176,6 +176,28 @@
   "lang.pt": "Portuguese",
   "lang.en": "English",
   "lang.es": "Spanish",
+  "footer.copyright": "© {year} {company}",
+  "footer.section.legal": "Legal information",
+  "footer.section.support": "Support and subscriptions",
+  "footer.section.transparency": "Transparency",
+  "footer.section.channels": "Official channels",
+  "footer.legal.summary": "{company} • {document} • Headquarters in {address}",
+  "footer.support.shortLabel": "Support:",
+  "footer.support.contactLabel": "Contact:",
+  "footer.support.hoursLabel": "Support hours: {hours}",
+  "footer.support.dpoLabel": "Data protection officer:",
+  "footer.support.manageLabel": "Manage subscription:",
+  "footer.links.privacy": "Privacy Policy",
+  "footer.links.terms": "Terms of Use",
+  "footer.links.supportCenter": "Support center",
+  "footer.links.manageSubscriptionApple": "Instructions for the App Store",
+  "footer.links.manageSubscriptionGoogle": "Instructions for Google Play",
+  "footer.channels.description": "Install the official app from the digital stores.",
+  "footer.badges.downloadOn": "Download on",
+  "footer.badges.getItOn": "Get it on",
+  "footer.badges.appStore": "App Store",
+  "footer.badges.googlePlay": "Google Play",
+  "footer.transparency.memoryLabel": "Memory status:",
   "footer.revision": "{appName} · Revision {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revision unavailable",
   "footer.revisionLog": "View revision log",
