--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -176,6 +176,28 @@
   "lang.pt": "Portugués",
   "lang.en": "Inglés",
   "lang.es": "Español",
+  "footer.copyright": "© {year} {company}",
+  "footer.section.legal": "Información legal",
+  "footer.section.support": "Soporte y suscripciones",
+  "footer.section.transparency": "Transparencia",
+  "footer.section.channels": "Canales oficiales",
+  "footer.legal.summary": "{company} • {document} • Sede en {address}",
+  "footer.support.shortLabel": "Soporte:",
+  "footer.support.contactLabel": "Contacto:",
+  "footer.support.hoursLabel": "Horario de atención: {hours}",
+  "footer.support.dpoLabel": "Encargado de datos:",
+  "footer.support.manageLabel": "Gestionar suscripción:",
+  "footer.links.privacy": "Política de Privacidad",
+  "footer.links.terms": "Términos de uso",
+  "footer.links.supportCenter": "Centro de soporte",
+  "footer.links.manageSubscriptionApple": "Instrucciones para App Store",
+  "footer.links.manageSubscriptionGoogle": "Instrucciones para Google Play",
+  "footer.channels.description": "Instala la app oficial desde las tiendas digitales.",
+  "footer.badges.downloadOn": "Descargar en",
+  "footer.badges.getItOn": "Disponible en",
+  "footer.badges.appStore": "App Store",
+  "footer.badges.googlePlay": "Google Play",
+  "footer.transparency.memoryLabel": "Estado de memoria:",
   "footer.revision": "{appName} · Revisión {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisión no disponible",
   "footer.revisionLog": "Ver registro de revisiones",
