--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -50,7 +50,28 @@
   "miniapps.userDashboard.label": "Painel do usuário",
   "miniapps.userDashboard.title": "MiniApp Painel do Usuário",
   "miniapps.userDashboard.message": "",
-  "footer.copyright": "2024 Organização Exemplo",
+  "footer.copyright": "© {year} {company}",
+  "footer.section.legal": "Informações legais",
+  "footer.section.support": "Suporte e assinaturas",
+  "footer.section.transparency": "Transparência",
+  "footer.section.channels": "Canais oficiais",
+  "footer.legal.summary": "{company} • {document} • Sede em {address}",
+  "footer.support.shortLabel": "Suporte:",
+  "footer.support.contactLabel": "Atendimento:",
+  "footer.support.hoursLabel": "Horário de atendimento: {hours}",
+  "footer.support.dpoLabel": "Encarregado de dados:",
+  "footer.support.manageLabel": "Gerenciar assinatura:",
+  "footer.links.privacy": "Política de Privacidade",
+  "footer.links.terms": "Termos de Uso",
+  "footer.links.supportCenter": "Central de suporte",
+  "footer.links.manageSubscriptionApple": "Orientações para App Store",
+  "footer.links.manageSubscriptionGoogle": "Orientações para Google Play",
+  "footer.channels.description": "Instale o app oficial nas lojas digitais.",
+  "footer.badges.downloadOn": "Baixar na",
+  "footer.badges.getItOn": "Disponível no",
+  "footer.badges.appStore": "App Store",
+  "footer.badges.googlePlay": "Google Play",
+  "footer.transparency.memoryLabel": "Status de memória:",
   "footer.revision": "{appName} · Revisão {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisão indisponível",
   "footer.revisionLog": "Ver log de revisões",
