Adjust quick links trigger for compact mobile header

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -14,6 +14,8 @@
   "actions.openUserPanelWithName": "Open user panel for {name}",
   "actions.openSystemPanel": "Open system panel",
   "actions.openMiniappMenu": "Open mini-app menu",
+  "actions.quickLinksTrigger": "Menu",
+  "actions.openQuickLinks": "Open main menu",
   "actions.close": "Close",
   "actions.toggleSidebar": "Toggle sidebar",
   "actions.save": "Save",
