--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -14,6 +14,8 @@
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
   "actions.openSystemPanel": "Abrir painel do sistema",
   "actions.openMiniappMenu": "Abrir menu de miniapps",
+  "actions.quickLinksTrigger": "Menu",
+  "actions.openQuickLinks": "Abrir menu principal",
   "actions.close": "Fechar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Salvar",
